# launcher

./: .gitignore  README.md  package.json
.github/workflows/: build.yml
src/: App.css  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: download.rs  main.rs  start.rs  test.rs
src/assets/: clog.ts
src/pages/: _app.tsx  index.tsx  start.tsx
src/pages/install/: index.tsx
